Fix HomepageBanner alignment

--- a/client/src/components/organisms/style/HomepageBanner.scss
+++ b/client/src/components/organisms/style/HomepageBanner.scss
@@ -14,7 +14,8 @@
 
   &-info {
     padding-left: 80px;
-    margin: 0 auto;
+    // margin: 0 15% 0 2%;
+    margin: 0 14% 0 2%;
 
     & h1 {
       font-weight: bold;
